test/Fail/Issue228.err
Issue228.agda:19.5-18: error: [UnequalSorts]
Set (lsuc lzero ⊔ ∞) != Set
when checking that the expression Large × Small has type Set
